@@ -1,2 +1,4 @@
+HEAD
+	+ Fixed samba dependency and related preconditions
 4.0
 	+ Initial release
